# graco

./: .gitignore  Cargo.toml  README.md
examples/data/: README.md
examples/web/coarsening/: Cargo.toml  index.html
examples/web/coarsening/src/: main.rs
examples/web/coarsening_disconnected/: Cargo.toml
examples/web/coarsening_disconnected/src/: main.rs
examples/web/coarsening_disconnected/src/compute_child_level_positions/: mod.rs
examples/web/coarsening_perf/: Cargo.toml  index.html
examples/web/coarsening_perf/src/: main.rs
examples/web/coarsening_recompute_weights/: Cargo.toml
examples/web/coarsening_recompute_weights/src/: main.rs
examples/web/coarsening_recompute_weights/src/compute_child_level_positions/: mod.rs  shader.wgsl
examples/web/coarsening_recompute_weights/src/compute_edge_weights/: mod.rs  shader.wgsl
examples/web/match_pairs_by_edge_weight/: Cargo.toml  index.html
examples/web/match_pairs_by_edge_weight/src/: main.rs
examples/web/match_pairs_by_edge_weight_2/: Cargo.toml
examples/web/match_pairs_by_edge_weight_2/src/: main.rs
graco/: Cargo.toml
graco/src/: counts_fallback.rs  lib.rs
graco/src/coarsen_graph/: coarsen_graph.rs  mod.rs  validity.wgsl
graco/src/coarsen_graph/collect_coarse_nodes_edge_weights/: mod.rs  shader.wgsl
graco/src/coarsen_graph/compact_coarse_edges/: mod.rs  shader.wgsl
graco/src/coarsen_graph/finalize_coarse_nodes_edge_offset/: mod.rs  shader.wgsl
graco/src/coarsen_graph/gather_edge_owner_list/: mod.rs  shader.wgsl
graco/src/coarsen_graph/generate_dispatches/: mod.rs  shader.wgsl
graco/src/coarsen_graph/generate_index_list/: mod.rs  shader.wgsl
graco/src/coarsen_graph/mark_coarse_edge_validity/: mod.rs  shader.wgsl
graco/src/coarsen_graph/resolve_coarse_edge_ref_count/: mod.rs  shader.wgsl
graco/src/matching/: mod.rs
graco/src/matching/match_pairs_by_edge_weight/: match_state.rs  match_state.wgsl  mod.rs
graco/src/matching/match_pairs_by_edge_weight/assign_node_colors/: mod.rs  shader.wgsl
graco/src/matching/match_pairs_by_edge_weight/finalize_matching/: mod.rs  shader.wgsl
graco/src/matching/match_pairs_by_edge_weight/find_matches/: mod.rs  shader.wgsl
graco/src/matching/match_pairs_by_edge_weight/generate_dispatch/: mod.rs  shader.wgsl
graco/src/matching/match_pairs_by_edge_weight/make_proposals/: mod.rs  shader.wgsl
graph-loading/: Cargo.toml
graph-loading/src/: lib.rs
web-viewer/: Cargo.toml
web-viewer/src/: edge_vertex.rs  lib.rs  renderer.rs
web-viewer/src/draw_edge_lines/: mod.rs  shader.wgsl
web-viewer/src/draw_point_triangles/: mod.rs  shader.wgsl
web-viewer/src/generate_dispatches/: mod.rs  shader.wgsl
web-viewer/src/generate_edge_line_vertices/: mod.rs  shader.wgsl
