[package]
name = "graco"
version = "0.1.0"
description = "Parallel graph coarsening on the GPU."
authors = ["RSSchermer <roland0507@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
empa = { version = "0.1.0", path = "../../glitz/empa" }
oorandom = "11.1.3"
zeroable = { path = "../../zeroable_crates/zeroable" }
