[package]
name = "graco"
version = "0.1.0"
description = "Parallel graph coarsening on the GPU."
authors = ["RSSchermer <roland0507@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
empa = { version = "0.1.0", path = "../../glitz/crates/empa", features = ["bytemuck"] }
empa-tk = { path = "../../empa-tk/empa-tk" }
oorandom = "11.1.3"
