[package]
name = "web-viewer"
version = "0.1.0"
authors = ["RSSchermer <roland0507@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
arwa = { version = "0.1.1", path = "../../rudo/arwa" }
bytemuck = { version = "1.14.0", features = ["derive"] }
empa = { path = "../../glitz/empa", features = ["bytemuck"] }
empa-glam = { version = "0.1.0", path = "../../glitz/empa_glam" }
glam = "^0.24"
