cargo-features = ["per-package-target"]

[package]
name = "coarsening-perf-example"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false
forced-target = "wasm32-unknown-unknown"

[dependencies]
arwa = { version = "0.1.0", path = "../../../../rudo/arwa" }
empa = { version = "0.1.0", path = "../../../../glitz/crates/empa", features = ["arwa"] }
futures = "0.3.21"
graco = { path = "../../../graco" }
oorandom = "11.1.3"
wasm-bindgen = "0.2.81"
console_error_panic_hook = "0.1.2"
